changed learn to resources

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ import Navigation from '../js/navigation.js';
                     <a class="navigation-link" href="/">Home</a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link" href="/learn">Learn</a>
+                    <a class="navigation-link" href="/resources">Resources</a>
                 </li>
                 <li class="navigation-item">
                     <a class="navigation-link" href="/blog">Blog</a>
