--- a/src/pages/Resources.astro
+++ b/src/pages/Resources.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
             <section class="hero-container">     
                 <div class="hero">
                     <div class="hero-text">
-                      <h1 class="margin-bottom-4">Coming Soon!</h1>
+                      <h1 class="margin-bottom-4">Coming Soon</h1>
                       <p class="margin-bottom-8">View these case studies and examples and learn how we use teamwork and user-centered design to achieve business goals and improve overall user satisfaction.</p>
                     </div>
                 </div>
