updated a few things

--- a/src/components/Blog/BlogNav.astro
+++ b/src/components/Blog/BlogNav.astro
@@ -21,7 +21,7 @@ const navs = [
     href: "/blog/UI"
   },
   {
-    title: "🎦",
+    title: "</>",
     id: "MEDIA",
     href: "/blog/MEDIA"
   },
