--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -29,7 +29,7 @@ const headings = post.getHeadings();
             <div class="rounded-corners">
                 <div class="margin-bottom-16">
                     <p>
-                        In This Article
+                        TABLE OF CONTENTS
                     </p>
                     <div class="label-medium"></div>
                     {headings.slice(0,8).map((heading) => (
