--- a/src/stylesheets/article.css
+++ b/src/stylesheets/article.css
@@ -66,6 +66,6 @@ article {
       grid-column: 1 / 9;      
       text-align: left;
       background-color: var(--dark);
-      padding: .3rem;
+      padding: 1rem;
     }
   }
