--- a/src/pages/blog/UX/index.astro
+++ b/src/pages/blog/UX/index.astro
@@ -28,7 +28,10 @@ const groupId = 'UX'
       <div class="col-sm-8 col-12 blog-lists">
         <article class="difficulty order-3 order-md-1">
           <BlogNav active={groupId}/>
-        </article>  
+        </article>
+        <div class="instruction">
+          Next, select a difficulty setting:
+        </div>   
         <article class="difficulty order-2 order-md-2">
           <Difficulty />
         </article>
