--- a/src/pages/blog/IA/index.astro
+++ b/src/pages/blog/IA/index.astro
@@ -29,6 +29,9 @@ const groupId = 'IA'
         <article class="difficulty order-3 order-md-1">
           <BlogNav active={groupId}/>
         </article>  
+        <div class="instruction">
+          Next, select a difficulty setting:
+        </div> 
         <article class="difficulty order-2 order-md-2">
           <Difficulty />
         </article>
