--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 
 const { title } = Astro.props;
-
+console.log(title)
 import Navbar from "../components/Navbar.astro";
 
 import "../stylesheets/article.css";
@@ -18,7 +18,6 @@ import "../stylesheets/copy-text.css";
 import "../stylesheets/daily-ux.css";
 import "../stylesheets/details.css";
 import "../stylesheets/form.css";
-import "../stylesheets/hero.css";
 import "../stylesheets/login.css";
 import "../stylesheets/main.css";
 import "../stylesheets/navigation.css";
