updated layout titles

--- a/src/components/Index_head.astro
+++ b/src/components/Index_head.astro
@@ -1,6 +1,5 @@
 ---
-
-
+const title = 'meta title';
 ---
 
 <!-- This is the Headline, subtitle, & Product/Services images and descriptions (Above the fold)  -->
@@ -8,7 +7,7 @@
     <section class="hero-container">     
         <div class="hero">
             <div class="hero-text">
-                <h1>Personalization</h1>
+                <h1>{title}</h1>
                 <p class="subtitle margin-bottom-8">Designing for individuality in a mass-produced world</p>
             </div>
         </div>
