updated layout titles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 
-<Layout title="Unique UX">
+<Layout title="UX WRLD | About">
     <header class="main background100">
         <section class="hero-container">
             <h1 class="title">Our goal is to create and enhance the design of our content to ensure it is accessible, user-friendly, and enjoyable for everyone.</h1>
