--- a/src/pages/blog/UX/index.astro
+++ b/src/pages/blog/UX/index.astro
@@ -14,7 +14,7 @@ const video_url = "https://www.youtube.com/embed/tgbNymZ7vqY";
 const groupId = 'UX'
 ---
 
-<Layout title="Ux Unboxed | UX | Blog">
+<Layout title="UX WRLD | UX | Blog">
   <header class="main">
     <section class="hero-container">
       <!-- <div class="title-large margin-bottom-8">UX Unboxed</div>
