--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Unique UX">
+<Layout title="UX WRLD | Contact">
     <header class="main background100">
         <section class="hero-container">
             <h1 class="subtitle">Contact Unique UX</h1>
