--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Unique UX">
+<Layout title="UX WRLD | Success">
 
     <!-- This is the Headline, subtitle, & Product/Services images and descriptions (Above the fold)  -->
     <header class="hero margin-top-32">
