--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import IndexHead from "../components/Index_head.astro";
 ---
 
-<Layout title="Unique UX">
+<Layout title="UX WRLD | Home">
     <IndexHead />
 
     <main class="rounded-corners">
